# FE_mesh_gen

./: .gitignore  CMakeLists.txt  README.md
DataStructures/: CMakeLists.txt
DataStructures/include/: BSplineSurface.hpp  DataStructs.hpp  SurfaceMetric.hpp
DataStructures/src/: BSplineSurface.cpp  SurfaceMetric.cpp
MeshGenMethods/: CMakeLists.txt
MeshGenMethods/include/: AbstractMethod.hpp  EllipsePackingMethod.hpp
MeshGenMethods/src/: EllipsePackingMethod.cpp
Solution/: CMakeLists.txt
Solution/include/: Solution.hpp
Solution/src/: Solution.cpp
StepTranslator/: CMakeLists.txt
StepTranslator/include/: AbstractTranslator.hpp  StepTranslator.hpp
StepTranslator/src/: StepTranslator.cpp
main/: CMakeLists.txt  for_parser.step
main/src/: main.cpp
